# swagger-output.json
@@ -800,6 +800,483 @@
           }
         ]
       }
+    },
+    "/getAllFormsForAdmin": {
+      "get": {
+        "tags": [
+          "ADMIN"
+        ],
+        "summary": "Επιστρέφει τις υποβληθείσες φορμες του συτηματος.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/admSubmitFormForCorrections": {
+      "post": {
+        "tags": [
+          "ADMIN"
+        ],
+        "summary": "Επιστροφη φορμας στον πολιτη για διορθωση",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "applicationAA": {
+                  "type": "string",
+                  "example": "1"
+                },
+                "formKey": {
+                  "type": "string",
+                  "example": "RelocationDueToTwoYearRes"
+                },
+                "appStatusComments": {
+                  "type": "string",
+                  "example": "Παρακαλουμε να υποβαλλετε την φορμα ξανα με τις σωστες πληροφοριες"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/admSubmitFormRejected": {
+      "post": {
+        "tags": [
+          "ADMIN"
+        ],
+        "summary": "Απόρριψη αίτησης πολίτη",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "applicationAA": {
+                  "type": "string",
+                  "example": "1"
+                },
+                "formKey": {
+                  "type": "string",
+                  "example": "RelocationDueToTwoYearRes"
+                },
+                "appStatusComments": {
+                  "type": "string",
+                  "example": "το αιτημα σας δεν εγκριθηκε"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/getAllFormsForAdminFiltered": {
+      "get": {
+        "tags": [
+          "ADMIN"
+        ],
+        "summary": "Επιστρέφει αιτησεις βασει κριτηριων αναζητησης .",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "demeAA",
+            "in": "query",
+            "description": "Α/Α Δημου.",
+            "required": false,
+            "type": "number",
+            "example": "1"
+          },
+          {
+            "name": "sortingField",
+            "in": "query",
+            "description": "Πεδιο ταξινομησης.",
+            "required": false,
+            "type": "string",
+            "example": "surname"
+          },
+          {
+            "name": "sortingOrder",
+            "in": "query",
+            "description": "Σειρά ταξινομησης.",
+            "required": false,
+            "type": "string",
+            "example": "ASC"
+          },
+          {
+            "name": "formKey",
+            "in": "query",
+            "description": "Κλειδί φορμας.",
+            "required": false,
+            "type": "string",
+            "example": "ApplicationToACollectiveBo"
+          },
+          {
+            "name": "appStatus",
+            "in": "query",
+            "description": "Status αίτησης.",
+            "required": false,
+            "type": "number",
+            "example": "1"
+          },
+          {
+            "name": "surname",
+            "in": "query",
+            "description": "Επώνυμο η μερος επωνυμου πολίτη.",
+            "required": false,
+            "type": "string",
+            "example": "ΧΑΛΚ"
+          },
+          {
+            "name": "irisRegNo",
+            "in": "query",
+            "description": "Αρ. Πρωτοκόλλου ΙΡΙΔΑ.",
+            "required": false,
+            "type": "string",
+            "example": "1212"
+          },
+          {
+            "name": "regNo",
+            "in": "query",
+            "description": "Μοναδικός Αρ. Αίτησης",
+            "required": false,
+            "type": "number",
+            "example": "291"
+          },
+          {
+            "name": "vatNumber",
+            "in": "query",
+            "description": "ΑΦΜ",
+            "required": false,
+            "type": "string",
+            "example": "034998765"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/admUserCreate": {
+      "post": {
+        "tags": [
+          "ADMIN"
+        ],
+        "summary": "Δημιουργια νεου χρηστη",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "demeAA": {
+                  "type": "number",
+                  "example": 1
+                },
+                "userName": {
+                  "type": "string",
+                  "example": "user1"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "Τεστ1"
+                },
+                "firstName": {
+                  "type": "string",
+                  "example": "Τεστ2"
+                },
+                "pwd": {
+                  "type": "string",
+                  "example": "123"
+                },
+                "isAdmin": {
+                  "type": "number",
+                  "example": 0
+                },
+                "forms": {
+                  "type": "string",
+                  "example": "F1,F2,F3"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/Login": {
+      "post": {
+        "tags": [
+          "ADMIN"
+        ],
+        "summary": "Login to the application.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Login details...",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userName": {
+                  "type": "string",
+                  "example": "test"
+                },
+                "pwd": {
+                  "type": "string",
+                  "example": "123"
+                }
+              },
+              "required": [
+                "userName",
+                "pwd"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/admApplicationStatistics": {
+      "get": {
+        "tags": [
+          "ADMIN"
+        ],
+        "summary": "Επιστρέφει στατιστικες αιτησεων .",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "demeAA",
+            "in": "query",
+            "description": "Α/Α Δημου.",
+            "required": false,
+            "type": "number",
+            "example": "1"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/getLastFormsForAdmin": {
+      "get": {
+        "tags": [
+          "ADMIN"
+        ],
+        "summary": "Επιστρέφει το πολυ 10 τελευταιες αιτησεις.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "demeAA",
+            "in": "query",
+            "description": "Α/Α Δημου.",
+            "required": false,
+            "type": "number",
+            "example": "1"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
     }
   }
 }
